fix(content-highlighter): truncation in message preview

--- a/src/components/content-highlighter/styles.scss
+++ b/src/components/content-highlighter/styles.scss
@@ -6,7 +6,6 @@
   text-overflow: ellipsis;
 
   &__user-mention {
-    display: inline-block;
     font-size: 14px;
     font-weight: 700;
     line-height: 14px;
